
Incremental changes are listed in the project’s [commit history](https://github.com/splorp/newton-glossary/commits/master).

Recently added terms and sources can be found on the [latest additions](/latest) page.

## 2.4.2

Terms: _$t
Sources: _$s

### Summary of changes:

+ Added new terms
+ Added new sources
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version [2.5.7](https://getkirby.com/changelog/kirby-2-5-7)

## 2.4.1

04 November 2017

Terms: 1,155
Sources: 109

### Summary of changes:

+ Added 20 new terms
+ Added 2 new sources
+ Updated and expanded dozens of existing entries
+ Added [sitemap](/sitemap.xml) link to footer
+ Added current version number to footer
+ Added title attributes to main navigational links
+ Improved handling of UTF-8 encoded characters in alphabetical listings
+ Implemented [Kirby Paperback Export](https://github.com/splorp/kirby-paperback-export) plugin
+ Updated [Kirby](https://getkirby.com/) to version [2.5.6](https://getkirby.com/changelog/kirby-2-5-6)

## 2.4.0

13 October 2017

Terms: 1,135
Sources: 107

### Summary of changes:

+ Added 25 new terms
+ Added 1 new source
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version [2.5.5](https://getkirby.com/changelog/kirby-2-5-5)

## 2.3.1

17 September 2017

Terms: 1,110
Sources: 106

### Summary of changes:

+ Added 58 new terms
+ Added 8 new sources
+ Updated and expanded dozens of existing entries
+ Implemented [Kirby Meta Tags](https://github.com/pedroborges/kirby-xml-sitemap) plugin
+ Added [Open Graph](http://ogp.me/) and [Twitter Cards](https://dev.twitter.com/cards/overview) meta tag support
+ Updated site and mobile device icons

## 2.3.0

24 April 2017

Terms: 1,052
Sources: 98

### Summary of changes:

+ Added 45 new terms
+ Added 3 new sources
+ Updated and expanded dozens of existing entries
+ Added page listing the [latest additions](/latest) to the glossary