@@ -1,6 +1,4 @@
-<?php if($page->description() != '') { $page_description = $page->description(); } else { $page_description = excerpt(kirbytext($page->text()), 300); } ?>
-
-<?php snippet('header', array('title' => $page->title(), 'page_description' => $page_description)); ?>
+<?php snippet('header') ?>
 <?php snippet('menu') ?>
 
 <?php
