@@ -28,6 +28,8 @@ Sources: _$s
 + Added new terms
 + Added new sources
 + Updated and expanded dozens of existing entries
++ Removed contextual header elements from page templates
++ Updated [Kirby Meta Tags](https://github.com/pedroborges/kirby-xml-sitemap) plugin to version 1.0.0
 + Updated [Kirby](https://getkirby.com/) to version [2.5.7](https://getkirby.com/changelog/kirby-2-5-7)
 
 ## 2.4.1
